vendored_parsers/tree-sitter-surface/test/corpus/directives.txt
================================================================================
If Directive
================================================================================

<Root :if={@loading} />

--------------------------------------------------------------------------------

(fragment
  (component
    (self_closing_component
      (component_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
Show Directive
================================================================================

<Root :show={@loading} />

--------------------------------------------------------------------------------

(fragment
  (component
    (self_closing_component
      (component_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
Let Directive
================================================================================

<Root :let={value: value} />

--------------------------------------------------------------------------------

(fragment
  (component
    (self_closing_component
      (component_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
Args Directive
================================================================================

<#slot :args={value: @value} />

--------------------------------------------------------------------------------

(fragment
  (component
    (self_closing_component
      (component_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
Args Directive
================================================================================

<button :on-click="click" :values={values: @values}>
  Click me!
</button>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag
      (tag_name)
      (directive
        (directive_name)
        (quoted_attribute_value
          (attribute_value)))
      (directive
        (directive_name)
        (expression
          (expression_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Hook Directive
================================================================================

<Root :hook="Hook" />

--------------------------------------------------------------------------------

(fragment
  (component
    (self_closing_component
      (component_name)
      (directive
        (directive_name)
        (quoted_attribute_value
          (attribute_value))))))

================================================================================
On-Click Directive
================================================================================

<button :on-click={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Capture-Click Directive
================================================================================

<button :on-capture-click={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Blur Directive
================================================================================

<button :on-blur={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Focus Directive
================================================================================

<button :on-focus={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Change Directive
================================================================================

<button :on-change={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Submit Directive
================================================================================

<button :on-submit={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Keydown Directive
================================================================================

<button :on-keydown={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Keyup Directive
================================================================================

<button :on-keyup={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Window-Focus Directive
================================================================================

<button :on-window-focus={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Window-Blur Directive
================================================================================

<button :on-window-blur={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Window-Keydown Directive
================================================================================

<button :on-window-keydown={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))

================================================================================
On-Window-Keyup Directive
================================================================================

<button :on-window-keyup={"foo"} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (directive
        (directive_name)
        (expression
          (expression_value))))))
